Add realisation for get and post request admin